--- a/C# Web Devolpment Basic-May2018/07.INTRODUCTION TO MVC. CREATING MVC FRAMEWORK/SIS/Apps/IRunesWebApp/IRunesWebApp.csproj
+++ b/C# Web Devolpment Basic-May2018/07.INTRODUCTION TO MVC. CREATING MVC FRAMEWORK/SIS/Apps/IRunesWebApp/IRunesWebApp.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Services\Services.csproj" />
-    <ProjectReference Include="..\..\SIS.WebServer\SIS.WebServer.csproj" />
+    <ProjectReference Include="..\..\SIS.MvcFramework\SIS.MvcFramework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
