--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/MishMashWebApp.csproj
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/MishMashWebApp.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Views\Channels\Followed.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Views\Channels\Details.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
